@@ -990,8 +990,8 @@
 <parm_fe_scavenge_rate0 ocn_grid="gx3v7">1.6</parm_fe_scavenge_rate0>
 <parm_fe_scavenge_rate0                 >1.3</parm_fe_scavenge_rate0>
 
-<parm_f_prod_sp_CaCO3 ocn_grid="gx3v7">0.53</parm_f_prod_sp_CaCO3>
-<parm_f_prod_sp_CaCO3                 >0.55</parm_f_prod_sp_CaCO3>
+<parm_f_prod_sp_CaCO3 ocn_grid="gx3v7">0.053</parm_f_prod_sp_CaCO3>
+<parm_f_prod_sp_CaCO3                 >0.055</parm_f_prod_sp_CaCO3>
 
 <parm_POC_diss  > 88.0e2</parm_POC_diss>
 <parm_SiO2_diss >250.0e2</parm_SiO2_diss>
